--- a/style.css
+++ b/style.css
@@ -1,56 +1,49 @@
-
-*
-{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-
-  font-family: 'Rock 3D', cursive;
+  font-family: "Rock 3D", cursive;
 }
-.bg
-{
+.bg {
   height: 100vh;
+  overflow: hidden;
   background-image: url(./images/background.png);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position:center;
+  background-position: center;
   border: none;
   display: grid;
   grid-template-columns: 50vw 50vw;
   grid-template-rows: 10vh 60vh 30vh;
 }
-.hero
-{
+.hero {
   display: flex;
   grid-column: 2/3;
   grid-row: 2/3;
   height: 70%;
   justify-content: center;
-  align-self:center;
+  align-self: center;
 }
 nav {
-
   display: flex;
   color: white;
   margin: auto;
   justify-content: space-between;
   width: 80%;
-  margin: auto; 
+  margin: auto;
   grid-column: 1/3;
   grid-row: 1/2;
   animation: nav 6s infinite linear;
 }
 
-nav img
-{
+nav img {
   margin-top: 20px;
   width: 50px;
   height: 30px;
 }
-.desc
-{
+.desc {
   position: relative;
   width: 90%;
   padding: 20px 40px;
@@ -61,223 +54,255 @@ nav img
   text-transform: capitalize;
   line-height: 1.5;
   animation: textcolor 5s infinite linear;
-  
 }
-.desc h2
-{
+.desc h2 {
   font-size: 60px;
-
 }
- .desc button
-{
-
+.desc button {
   margin-top: 15px;
   width: 150px;
   font-size: 10px;
   padding: 15px 30px;
-  background:transparent;
+  background: transparent;
   color: aliceblue;
   border: 1px solid white;
   border-radius: 30px;
-  animation:  btnmove 3s infinite linear ;
- 
+  animation: btnmove 3s infinite linear;
 }
 
-.hero img{
+.hero img {
   height: 100%;
- 
 }
-.details
-{
+.details {
   color: white;
   grid-column: 2/3;
   grid-row: 3/4;
   text-align: center;
 }
-.chef-left
-{
+.chef-left {
   transform: translateY(-10%);
-  transition:1.5s;
+  transition: 1.5s;
 }
-.chef-right
-{
+.chef-right {
   transform: translateY(10%);
-  transition:1.5s;
+  transition: 1.5s;
 }
-.hero:hover .chef-left
-{
+.hero:hover .chef-left {
   cursor: pointer;
   transform: translateY(0%);
 }
-.hero:hover .chef-right
-{
+.hero:hover .chef-right {
   cursor: pointer;
   transform: translateY(0%);
 }
 
-@keyframes textcolor
-{
-  0%
-  {
+@keyframes textcolor {
+  0% {
     color: white;
     transform: translateY(0%);
   }
-  50%
-  {
-   color: rgb(28, 145, 192);
-   transform: translateY(-5%);
-
+  50% {
+    color: rgb(28, 145, 192);
+    transform: translateY(-5%);
   }
-  100%
-  {
+  100% {
     color: coral;
     transform: translateY(0%);
   }
-
 }
-.parent
-{
-  height: 0vh;
+.parent {
+  position: absolute;
+  width: 100%;
   display: flex;
   justify-content: space-around;
+  bottom: 0px;
 }
-@keyframes balls
-{
-  0%
-  {
+@keyframes balls {
+  0% {
     transform: translateY(0%);
   }
-  100%
-  {
-   transform: translateY(-900%);
-    opacity: 0; 
-
+  100% {
+    transform: translateY(-80vh);
+    opacity: 0;
   }
-
-
 }
-@keyframes nav
-{
-  0%
-  {
+@keyframes nav {
+  0% {
     transform: translateY(0%);
   }
-  50%
-  {
-   transform: translateY(15%);
+  50% {
+    transform: translateY(15%);
   }
-  100%
-  {
-   transform: translateY(0);
+  100% {
+    transform: translateY(0);
   }
-
-
 }
 
-.bol1
-{
+.bol1 {
   width: 30px;
   height: 30px;
   animation: balls 3s infinite linear;
 }
-.bol2
-{
+.bol2 {
   width: 15px;
   height: 15px;
   animation: balls 2s infinite linear;
 }
-.bol3
-{
+.bol3 {
   width: 20px;
   height: 20px;
   animation: balls 6s infinite linear;
 }
-.bol4
-{
+.bol4 {
   width: 45px;
   height: 45px;
   animation: balls 8s infinite linear;
 }
-.bol5
-{
+.bol5 {
   width: 40px;
   height: 40px;
   animation: balls 7s infinite linear;
 }
-.bol6
-{
+.bol6 {
   width: 25px;
   height: 25px;
   animation: balls 3s infinite linear;
 }
-.bol7
-{
+.bol7 {
   width: 30px;
   height: 30px;
   animation: balls 5s infinite linear;
 }
-.bol8
-{
+.bol8 {
   width: 40px;
   height: 40px;
   animation: balls 7s infinite linear;
 }
-.bol9
-{
+.bol9 {
   width: 12px;
   height: 12px;
   animation: balls 4s infinite linear;
 }
-
-@media  screen and (max-width: 750px) {
-  
-  .desc
-{
-  width: 100%;
-  padding: 20px 20px;
-
-  
+.side-bar {
+  position: absolute;
+  width: 50px;
+  height: 80vh;
+  background: linear-gradient(rgb(5, 100, 104), rgb(22, 117, 105));
+  top: 20%;
+  right: 0;
+  transition: 3s;
 }
-.desc p 
-{
-font-size: 15px;
-}
-.desc h2
-{
-  font-size: 20px;
-
-
-}
- .desc button
-{
-  margin-top: 20px;
-  width: 120px;
-  font-size: 10px;
-  padding: 10px 25px;
-  border-radius: 20px;
- 
-}
-.hero
-{
+.social-links {
   display: flex;
-  grid-column: 2/3;
-  grid-row: 2/3;
-  height: 40%;
-  justify-content: center;
-  align-self:center;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 40vh;
 }
-.bg
-{
- 
-  grid-template-columns: 60vw 40vw;
-  grid-template-rows: 10vh 60vh 30vh;
+.social-links img {
+  width: 25px;
+  transition: 3s;
 }
-.details
-{
-  color: white;
-  grid-column: 1/3;
-  grid-row: 3/4;
-  text-align: center;
+.info-links img {
+  width: 40px;
+  transition: 3s;
 }
-  
+.info-links {
+  position: absolute;
+  top: 60%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 20vh;
+}
+.side-bar:hover {
+  width: 150px;
+}
+.side-bar:hover .social-links img {
+  width: 40px;
+  cursor: pointer;
+}
+.side-bar:hover .info-links img {
+  width: 50px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 750px) {
+  .desc {
+    width: 100%;
+    padding: 20px 20px;
+  }
+  .desc p {
+    font-size: 15px;
+  }
+  .desc h2 {
+    font-size: 20px;
+  }
+  .desc button {
+    margin-top: 20px;
+    width: 120px;
+    font-size: 10px;
+    padding: 10px 25px;
+    border-radius: 20px;
+  }
+  .hero {
+    display: flex;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    height: 40%;
+    justify-content: center;
+    align-self: center;
+  }
+  .bg {
+    grid-template-columns: 60vw 40vw;
+    grid-template-rows: 10vh 50vh 40vh;
+  }
+  .details {
+    color: white;
+    grid-column: 1/3;
+    grid-row: 3/4;
+    text-align: center;
+  }
+  .side-bar {
+    height: 50px;
+    width: 100%;
+    top: 100%;
+  }
+  .social-links {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 20vh;
+    height: 50px;
+  }
+  .social-links img {
+    width: 25px;
+    transition: 3s;
+  }
+  .info-links img {
+    width: 35px;
+    transition: 3s;
+    margin-bottom: 7px;
+  }
+  .info-links {
+    width: 20vh;
+    height: 0px;
+    left: 50%;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-content: center;
+  }
+  .side-bar:hover {
+    width: 100%;
+  }
+  .side-bar:hover .social-links img {
+    width: 25px;
+    cursor: pointer;
+  }
+  .side-bar:hover .info-links img {
+    width: 25px;
+    cursor: pointer;
+  }
 }
